Header flickering fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -85,7 +85,6 @@ a.fa:hover {
   background-size: cover;
 }
 .logo {
-  opacity: 0;
   -webkit-transition: opacity .3s ease;
   -moz-transition: opacity .3s ease;
   -ms-transition: opacity .3s ease;
